--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -9,49 +9,53 @@
   
                   <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-0">Sign Up</p>
   
-                  <form class="mx-1 mx-md-4">
+                  <form [formGroup]="signupForm" class="mx-1 mx-md-4">
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example1c" class="form-control" />
-                        <label class="form-label" for="form3Example1c">Your Name</label>
+                        <label for="name" class="form-label">Name</label>
+                        <input formControlName="name" type="text" id="name" class="form-control" placeholder="Name">
+                        <div *ngIf="signupForm.get('name').invalid && signupForm.get('name').touched" class="text-danger">Please enter a valid name</div>
                       </div>
                     </div>
-  
+                    
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="email" id="form3Example3c" class="form-control" />
-                        <label class="form-label" for="form3Example3c">Your Email</label>
+                        <label for="email" class="form-label">Email</label>
+                        <input formControlName="email" type="email" id="email" class="form-control" placeholder="Email" required>
+                        <div *ngIf="signupForm.get('email').invalid && signupForm.get('email').touched" class="text-danger">Please enter a valid email</div>
                       </div>
+                    </div>                    
+  
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <label for="password" class="form-label">Password</label>
+                      <input formControlName="password" type="password" id="password" class="form-control" placeholder="Password">
+                      <button type="button" class="btn btn-icon" (click)="togglePasswordVisibility()">
+                        <i class="fas" [ngClass]="{'fa-eye': hidePassword, 'fa-eye-slash': !hidePassword}"></i>
+                      </button>
+                      <div *ngIf="signupForm.get('password').invalid && signupForm.get('password').touched" class="text-danger">Please enter a valid password.</div>
                     </div>
   
                     <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="password" id="form3Example4c" class="form-control" />
-                        <label class="form-label" for="form3Example4c">Password</label>
-                      </div>
+                      <label for="confirmPassword" class="form-label">Confirm Password</label>
+                      <input formControlName="confirmPassword" type="password" id="confirmPassword" class="form-control" placeholder="Confirm Password">
+                      <button type="button" class="btn btn-icon" (click)="togglePasswordVisibility()">
+                        <i class="fas" [ngClass]="{'fa-eye': hidePassword, 'fa-eye-slash': !hidePassword}"></i>
+                      </button>
+                      <div *ngIf="signupForm.get('confirmPassword').invalid && signupForm.get('confirmPassword').touched" class="text-danger">Please confirm your password.</div>
                     </div>
-  
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="password" id="form3Example4cd" class="form-control" />
-                        <label class="form-label" for="form3Example4cd">Repeat your password</label>
-                      </div>
-                    </div>
-  
+                    
                     <div class="form-check d-flex justify-content-center mb-5">
                       <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
                       <label class="form-check-label" for="form2Example3">
-                        I agree all statements in <a href="#!">Terms of Services & Privacy Policy</a>
+                        I agree all statements in <a href="#">Terms of Services & Privacy Policy</a>
                       </label>
                     </div>
   
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="button" class="btn btn-primary btn-lg">Sign Up</button>
+                      <button type="submit" class="btn btn-primary btn-lg" [disabled]="signupForm.invalid" (click)="onSubmit()">Sign Up</button>
                     </div>
   
                   </form>
